# lion_fused_kernel

./: .gitignore  README.md  pyproject.toml
kernel/: .gitignore  build.toml  example.py
kernel/benchmarks/: benchmark.py  dev_benchmark.py
kernel/lion_cpu/: lion_cpu.cpp
kernel/lion_cuda/: lion.cu
kernel/lion_metal/: common.h  lion.metal  lion.mm
kernel/lion_xpu/: lion.cpp
kernel/tests/: conftest.py  test_lion.py
kernel/torch-ext/: torch_binding.cpp  torch_binding.h
kernel/torch-ext/lion/: __init__.py
kernel/torch-ext/lion/layers/: __init__.py
