[project]
name = "lion-kernel-project"
version = "0.1.0"
description = "Project wrapper for the Lion Hugging Face kernels package"
requires-python = ">=3.10"
dependencies = [
    "kernels[torch]>=0.16,<0.17",
]

[dependency-groups]
dev = [
    "cmake",
    "ninja",
    "numpy",
    "pytest",
    "ruff",
    "setuptools",
    "wheel",
]

[tool.uv]
package = false

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.ruff]
line-length = 88
exclude = [
    "kernel/build",
    "kernel/_cmake_build",
    "kernel/cmake",
]
